workspace/src/uk/ac/stand/antlr/gen/stabParser.java
// $ANTLR 3.1.2 /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g 2009-04-17 02:30:30

	package uk.ac.stand.antlr.gen;

	import java.util.Map;
	import java.util.HashMap;
	import java.util.List;
	import java.util.LinkedList;
	import uk.ac.stand.scalafiles.Stab;
	import uk.ac.stand.scalafiles.Stab.*;
	import scala.Some;


import org.antlr.runtime.*;

public class stabParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEWLINE", "COMMENT", "SBEGIN", "SEND", "LCURLY", "RCURLY", "SEMI", "NAME", "LBRACK", "RBRACK", "OR", "AND", "NOT", "LESS", "GREATER", "EQUALS", "GREATEREQUAL", "LESSEQUAL", "NOTEQUAL", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", "LPAREN", "RPAREN", "DOT", "INT", "BOOL", "EPRIMEBLOCK", "COMMA", "COLON", "STAB", "ESSENCE", "PLUSEQUAL", "MINUSEQUAL", "MULTEQUAL", "DIVEQUAL", "MODEQUAL", "ASSIGN", "ENDESSENCE", "DEF", "WS", "USCORE", "ECOMMENT", "QUOTE", "LQUOTE", "ESC", "'break'", "'continue'", "'return'", "'if'", "'else'", "'while'", "'for'", "'function'"
    };
    public static final int LBRACK=12;
    public static final int DEF=46;
    public static final int MOD=27;
    public static final int ESC=52;
    public static final int MULTEQUAL=41;
    public static final int GREATEREQUAL=20;
    public static final int ESSENCE=38;
    public static final int EQUALS=19;
    public static final int STAB=37;
    public static final int NOT=16;
    public static final int AND=15;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int DIVEQUAL=42;
    public static final int LPAREN=29;
    public static final int PLUSEQUAL=39;
    public static final int NOTEQUAL=22;
    public static final int T__55=55;
    public static final int MINUSEQUAL=40;
    public static final int T__56=56;
    public static final int QUOTE=50;
    public static final int T__57=57;
    public static final int RPAREN=30;
    public static final int NAME=11;
    public static final int T__58=58;
    public static final int GREATER=18;
    public static final int MODEQUAL=43;
    public static final int POW=28;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int COMMA=35;
    public static final int T__59=59;
    public static final int LESS=17;
    public static final int SEND=7;
    public static final int PLUS=23;
    public static final int COMMENT=5;
    public static final int DOT=31;
    public static final int SBEGIN=6;
    public static final int RBRACK=13;
    public static final int LQUOTE=51;
    public static final int BOOL=33;
    public static final int LCURLY=8;
    public static final int INT=32;
    public static final int MINUS=24;
    public static final int MULT=25;
    public static final int SEMI=10;
    public static final int EPRIMEBLOCK=34;
    public static final int COLON=36;
    public static final int WS=47;
    public static final int NEWLINE=4;
    public static final int ECOMMENT=49;
    public static final int ENDESSENCE=45;
    public static final int USCORE=48;
    public static final int RCURLY=9;
    public static final int OR=14;
    public static final int ASSIGN=44;
    public static final int DIV=26;
    public static final int LESSEQUAL=21;

    // delegates
    // delegators


        public stabParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public stabParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return stabParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g"; }


    	
    	List<FuncDef> funcdefs = new LinkedList<FuncDef>();
    	
    	Map<Integer, String> essence = new HashMap<Integer, String>();
    	
    	int eblock = 0;



    // $ANTLR start "program"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:29:1: program returns [Program p] : r= rules ;
    public final Program program() throws RecognitionException {
        Program p = null;

        List<Stats> r = null;


        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:33:2: (r= rules )
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:33:4: r= rules
            {
            pushFollow(FOLLOW_rules_in_program44);
            r=rules();

            state._fsp--;
            if (state.failed) return p;

            }

            if ( state.backtracking==0 ) {

              	p = new Program(funcdefs, r);

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return p;
    }
    // $ANTLR end "program"


    // $ANTLR start "rules"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:36:1: rules returns [List<Stats> ret] : ( stab s= statements (e= essence )? | e= essence );
    public final List<Stats> rules() throws RecognitionException {
        List<Stats> ret = null;

        List<Term> s = null;

        List<Stats> e = null;


        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:37:2: ( stab s= statements (e= essence )? | e= essence )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==STAB) ) {
                alt2=1;
            }
            else if ( (LA2_0==ESSENCE) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ret;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:37:4: stab s= statements (e= essence )?
                    {
                    pushFollow(FOLLOW_stab_in_rules60);
                    stab();

                    state._fsp--;
                    if (state.failed) return ret;
                    pushFollow(FOLLOW_statements_in_rules64);
                    s=statements();

                    state._fsp--;
                    if (state.failed) return ret;
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:37:23: (e= essence )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==ESSENCE) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:37:23: e= essence
                            {
                            pushFollow(FOLLOW_essence_in_rules68);
                            e=essence();

                            state._fsp--;
                            if (state.failed) return ret;

                            }
                            break;

                    }

                    if ( state.backtracking==0 ) {

                      			List<Stats> l = new LinkedList<Stats>();
                      			if(s!=null) l.add(new Stats(s));
                      			if(e!=null) l.addAll(e);
                      			ret = l;
                      		
                    }

                    }
                    break;
                case 2 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:44:4: e= essence
                    {
                    pushFollow(FOLLOW_essence_in_rules80);
                    e=essence();

                    state._fsp--;
                    if (state.failed) return ret;
                    if ( state.backtracking==0 ) {
                      ret = e;
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "rules"


    // $ANTLR start "essence"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:49:1: essence returns [List<Stats> ret] : d= essencedef e= estatements ;
    public final List<Stats> essence() throws RecognitionException {
        List<Stats> ret = null;

        String d = null;

        List<Stats> e = null;


        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:50:2: (d= essencedef e= estatements )
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:50:4: d= essencedef e= estatements
            {
            pushFollow(FOLLOW_essencedef_in_essence102);
            d=essencedef();

            state._fsp--;
            if (state.failed) return ret;
            pushFollow(FOLLOW_estatements_in_essence106);
            e=estatements();

            state._fsp--;
            if (state.failed) return ret;
            if ( state.backtracking==0 ) {

              			List<Term> lt = new LinkedList<Term>();
              			lt.add(new EString(d));
              			List<Stats> ls = new LinkedList<Stats>();
              			ls.add(new Stats(lt));
              			ls.addAll(e);
              			ret = ls;
              		
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "essence"


    // $ANTLR start "estatements"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:61:1: estatements returns [List<Stats> ret] : (s= estatement )* ;
    public final List<Stats> estatements() throws RecognitionException {
        List<Stats> ret = null;

        Stats s = null;



        	List<Stats> l = new LinkedList<Stats>();

        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:68:2: ( (s= estatement )* )
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:68:4: (s= estatement )*
            {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:68:4: (s= estatement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NEWLINE||(LA3_0>=SBEGIN && LA3_0<=60)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:68:5: s= estatement
            	    {
            	    pushFollow(FOLLOW_estatement_in_estatements139);
            	    s=estatement();

            	    state._fsp--;
            	    if (state.failed) return ret;
            	    if ( state.backtracking==0 ) {
            	      l.add(s);
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            if ( state.backtracking==0 ) {

              	ret = l;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "estatements"


    // $ANTLR start "estatement"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:73:1: estatement returns [Stats ret] : ( ( stabblock )=>s= stabblock | ec= essencecode );
    public final Stats estatement() throws RecognitionException {
        Stats ret = null;

        Stats s = null;

        String ec = null;


        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:74:2: ( ( stabblock )=>s= stabblock | ec= essencecode )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==SBEGIN) ) {
                int LA4_1 = input.LA(2);

                if ( (synpred1_stab()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ret;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA4_0==NEWLINE||(LA4_0>=SEND && LA4_0<=60)) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ret;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:74:4: ( stabblock )=>s= stabblock
                    {
                    pushFollow(FOLLOW_stabblock_in_estatement173);
                    s=stabblock();

                    state._fsp--;
                    if (state.failed) return ret;
                    if ( state.backtracking==0 ) {
                      ret = s;
                    }

                    }
                    break;
                case 2 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:75:4: ec= essencecode
                    {
                    pushFollow(FOLLOW_essencecode_in_estatement182);
                    ec=essencecode();

                    state._fsp--;
                    if (state.failed) return ret;
                    if ( state.backtracking==0 ) {

                      				List<Term> l = new LinkedList<Term>();
                      				l.add(new EString(ec));
                      				ret = new Stats(l);
                      			
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "estatement"


    // $ANTLR start "essencecode"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:82:1: essencecode returns [String ret] : something ;
    public final String essencecode() throws RecognitionException {
        String ret = null;


        	eblock++;

        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:89:2: ( something )
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:89:4: something
            {
            pushFollow(FOLLOW_something_in_essencecode209);
            something();

            state._fsp--;
            if (state.failed) return ret;

            }

            if ( state.backtracking==0 ) {

              	ret = essence.get(eblock);

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "essencecode"


    // $ANTLR start "something"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:92:1: something : ( options {greedy=false; } : t=~ ( NEWLINE | COMMENT ) )* NEWLINE ;
    public final void something() throws RecognitionException {
        Token t=null;


        	StringBuffer buffer = new StringBuffer();

        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:99:2: ( ( options {greedy=false; } : t=~ ( NEWLINE | COMMENT ) )* NEWLINE )
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:99:4: ( options {greedy=false; } : t=~ ( NEWLINE | COMMENT ) )* NEWLINE
            {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:99:4: ( options {greedy=false; } : t=~ ( NEWLINE | COMMENT ) )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=SBEGIN && LA5_0<=60)) ) {
                    alt5=1;
                }
                else if ( (LA5_0==NEWLINE) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:99:30: t=~ ( NEWLINE | COMMENT )
            	    {
            	    t=(Token)input.LT(1);
            	    if ( (input.LA(1)>=SBEGIN && input.LA(1)<=60) ) {
            	        input.consume();
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return ;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    if ( state.backtracking==0 ) {
            	      buffer.append((t!=null?t.getText():null)); 
            	      			int i = (t!=null?t.getTokenIndex():0) + 1;
            	      			if(i<input.size()) {
            	      				Token tkn = input.get(i);
            	      				while(i<input.size() && tkn!= Token.EOF_TOKEN && tkn.getChannel() == Token.HIDDEN_CHANNEL) {
            	      					buffer.append(tkn.getText());
            	      					i++;
            	      					tkn = input.get(i);
            	      				}
            	      			}
            	      		
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,NEWLINE,FOLLOW_NEWLINE_in_something254); if (state.failed) return ;

            }

            if ( state.backtracking==0 ) {

              	essence.put(eblock, buffer.toString());

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "something"


    // $ANTLR start "stabblock"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:112:1: stabblock returns [Stats ret] : SBEGIN s= statements SEND ;
    public final Stats stabblock() throws RecognitionException {
        Stats ret = null;

        List<Term> s = null;


        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:116:2: ( SBEGIN s= statements SEND )
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:116:4: SBEGIN s= statements SEND
            {
            match(input,SBEGIN,FOLLOW_SBEGIN_in_stabblock275); if (state.failed) return ret;
            pushFollow(FOLLOW_statements_in_stabblock279);
            s=statements();

            state._fsp--;
            if (state.failed) return ret;
            match(input,SEND,FOLLOW_SEND_in_stabblock281); if (state.failed) return ret;

            }

            if ( state.backtracking==0 ) {

              	ret = new Stats(s);

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "stabblock"


    // $ANTLR start "statements"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:119:1: statements returns [List<Term> ret] : (s= statement )* ;
    public final List<Term> statements() throws RecognitionException {
        List<Term> ret = null;

        List<Term> s = null;



        	List<Term> l = new LinkedList<Term>();

        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:126:2: ( (s= statement )* )
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:126:4: (s= statement )*
            {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:126:4: (s= statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==NEWLINE||LA6_0==LCURLY||LA6_0==NAME||LA6_0==NOT||LA6_0==MINUS||LA6_0==LPAREN||(LA6_0>=INT && LA6_0<=EPRIMEBLOCK)||(LA6_0>=53 && LA6_0<=56)||(LA6_0>=58 && LA6_0<=60)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:126:5: s= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_statements310);
            	    s=statement();

            	    state._fsp--;
            	    if (state.failed) return ret;
            	    if ( state.backtracking==0 ) {
            	      if(s!=null) l.addAll(s);
            	    }

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            if ( state.backtracking==0 ) {

              	ret = l;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ret;
    }
    // $ANTLR end "statements"


    // $ANTLR start "statement"
    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:129:1: statement returns [List<Term> ret] : ( LCURLY ls= statements RCURLY | ss= simple_stmt | s= compound_stmt | NEWLINE );
    public final List<Term> statement() throws RecognitionException {
        List<Term> ret = null;

        List<Term> ls = null;

        List<Term> ss = null;

        Term s = null;


        try {
            // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:130:2: ( LCURLY ls= statements RCURLY | ss= simple_stmt | s= compound_stmt | NEWLINE )
            int alt7=4;
            switch ( input.LA(1) ) {
            case LCURLY:
                {
                alt7=1;
                }
                break;
            case NAME:
            case NOT:
            case MINUS:
            case LPAREN:
            case INT:
            case BOOL:
            case EPRIMEBLOCK:
            case 53:
            case 54:
            case 55:
                {
                alt7=2;
                }
                break;
            case 56:
            case 58:
            case 59:
            case 60:
                {
                alt7=3;
                }
                break;
            case NEWLINE:
                {
                alt7=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ret;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:130:4: LCURLY ls= statements RCURLY
                    {
                    match(input,LCURLY,FOLLOW_LCURLY_in_statement329); if (state.failed) return ret;
                    pushFollow(FOLLOW_statements_in_statement333);
                    ls=statements();

                    state._fsp--;
                    if (state.failed) return ret;
                    match(input,RCURLY,FOLLOW_RCURLY_in_statement335); if (state.failed) return ret;
                    if ( state.backtracking==0 ) {
                      ret = ls;
                    }

                    }
                    break;
                case 2 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:132:4: ss= simple_stmt
                    {
                    pushFollow(FOLLOW_simple_stmt_in_statement347);
                    ss=simple_stmt();

                    state._fsp--;
                    if (state.failed) return ret;
                    if ( state.backtracking==0 ) {
                      ret = ss;
                    }

                    }
                    break;
                case 3 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:134:4: s= compound_stmt
                    {
                    pushFollow(FOLLOW_compound_stmt_in_statement359);
                    s=compound_stmt();

                    state._fsp--;
                    if (state.failed) return ret;
                    if ( state.backtracking==0 ) {
                      List<Term> lt = new LinkedList<Term>(); lt.add(s); ret = lt;
                    }

                    }
                    break;
                case 4 :
                    // /Users/chris/Documents/Computer Science/SH Project/code/antlr/stab.g:136:4: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_statement369); if (state.failed) return ret;

                    }
                    break;
